@startuml Normal_Chat
class User {
  id: int
  name: string
  email: string
  password: string
  favorite_ia: string
  shortcut: json
  ' Structure du shortcut (tableau d'objets) :
  ' [{ "command": "hi", "instruction": "hello " }, ...]
}
class AiSetting {
  id: int
  setting: string
  value: string
}
class Conversation {
  id: int
  title: string
  favorite_ia: string
  created_at: timestamp
  updated_at: timestamp
  insanity: int
}
class Message {
  id: int
  role: string
  content: string
  created_at: timestamp
}
User "1" -- "0..*" Conversation : has >
User "1" -- "0..*" AiSetting : configures >
Conversation "1" -- "1..*" Message : is made of >
@enduml
